# mocp-lite

./: .editorconfig  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  THANKS  TODO  audio.c  audio_conversion.c  common.c  config.example  config.h.in  configure.ac  configure.in  equalizer.c  interface.c  interface_elements.c  keys.c  main.c  menu.c  themes.c
assets/desktop/: mocf.desktop
assets/doc/: README_equalizer  config.example.in  keymap.example
assets/man/: mocf.1
assets/themes/: 30equals_theme  CMakeLists.txt  Makefile.am  alldefault_theme  alpha_green_theme  asuna_theme  black_orange_theme  black_red_white_theme  black_theme  blue_theme  darkdot_theme  deephouse_theme  dylanwh_theme  example_theme  green_theme  gruvbox_theme  hybrid-bright_theme  hybrid_theme  kirito_theme  lcars2_theme  lcars_theme  lcd_theme  moca_theme  mostly_green_theme  nes_theme  nightingale_theme  nightly_enhanced_theme  nightly_theme  nightshade_theme  orange_theme  orpheus_theme  paper_blue_theme  paper_white_theme  red_theme  rhowaldt_theme  rteff_theme  solarized_theme  transparent-background_theme  transparent-light_theme  tty_theme  (+4 more)
decoder_plugins/ffmpeg/: ffmpeg.c
docs/devel/: Doxyfile
docs/devel/doxy_pages/: decoder_api.doxy
libltdl/: Makefile.am  configure.ac
po/: ChangeLog
scripts/: README  moc_play_rating.sh  moc_submit_lastfm  mocf_notify  mocf_submit_lastfm
src/audio/: audio.c  audio.h  decoder.c  decoder.h
src/audio/conversion/: audio_conversion.c  audio_conversion.h
src/audio/decoders/: CMakeLists.txt  decoders.m4
src/audio/decoders/aac/: Makefile.am  aac.c  aac.m4
src/audio/decoders/ffmpeg/: Makefile.am  ffmpeg.c  ffmpeg.m4
src/audio/decoders/flac/: Makefile.am  flac.c  flac.m4
src/audio/decoders/modplug/: Makefile.am  modplug.c  modplug.m4
src/audio/decoders/mp3/: Makefile.am  mp3.c  mp3.m4  xing.c  xing.h
src/audio/decoders/mpg123/: Makefile.am  mpg123.c  mpg123.m4
src/audio/decoders/musepack/: Makefile.am  musepack.c  musepack.m4
src/audio/decoders/opus/: Makefile.am  opus.c  opus.m4
src/audio/decoders/sidplay2/: Makefile.am  sidplay2.cc  sidplay2.h  sidplay2.m4
src/audio/decoders/sndfile/: Makefile.am  sndfile.c  sndfile.m4
src/audio/decoders/speex/: Makefile.am  speex.c  speex.m4
src/audio/decoders/timidity/: Makefile.am  timidity.c  timidity.m4
src/audio/decoders/vorbis/: Makefile.am  vorbis.c  vorbis.m4
src/audio/decoders/wavpack/: Makefile.am  wavpack.c  wavpack.m4
src/audio/outputs/: alsa.c  alsa.h  jack.c  jack.h  null_out.c  null_out.h  oss.c  oss.h  out_buf.c  out_buf.h  pulse.c  pulse.h  sndio_out.c  sndio_out.h
src/audio/processing/: equalizer.c  equalizer.h  softmixer.c  softmixer.h
src/core/: common.c  common.h  compat.c  compat.h  compiler.h  log.c  log.h  main.c  options.c  options.h  protocol.c  protocol.h  server.c  server.h
src/io/: io.c  io.h  io_curl.c  io_curl.h
src/ui/: themes.c  themes.h
src/ui/curses/: interface.c  interface.h  interface_elements.c  interface_elements.h  lyrics.c  lyrics.h  menu.c  menu.h
src/ui/input/: keys.c  keys.h
src/utils/: fifo_buf.c  fifo_buf.h  lists.c  lists.h  md5.c  md5.h  rbtree.c  rbtree.h  utf8.c  utf8.h
themes/: Makefile.am  black_orange_theme  black_red_white_theme  black_theme  example_theme  hybrid-bright_theme  lcars_theme  moca_theme  nes_theme  nightshade_theme  orpheus_theme  paper_blue_theme  red_theme  rhowaldt_theme  transparent-background_theme  variant_red_theme  winter_theme
tools/: md5check.sh
