themesdir   = $(pkgdatadir)/themes
themes_DATA = 30equals_theme \
              alldefault_theme \
              alpha_green_theme \
              asuna_theme \
              black_orange_theme \
              black_red_white_theme \
              black_theme \
              blue_theme \
              darkdot_theme \
              deephouse_theme \
              dylanwh_theme \
              example_theme \
              green_theme \
              gruvbox_theme \
              hybrid-bright_theme \
              hybrid_theme \
              kirito_theme \
              lcars2_theme \
              lcars_theme \
              lcd_theme \
              moca_theme \
              mostly_green_theme \
              nes_theme \
              nightshade_theme \
              nightly_enhanced_theme \
              nightly_theme \
              orange_theme \
              orpheus_theme \
              paper_blue_theme \
              paper_white_theme \
              red_theme \
              rhowaldt_theme \
              rteff_theme \
              solarized_theme \
              transparent-background_theme \
              transparent-light_theme \
              tty_theme \
              variant_red_theme \
              white_theme \
              winter_theme \
              yellow_red_theme

EXTRA_DIST = $(themes_DATA)
